# Antigravity-Remote

./: .env.example  .gitignore  LICENSE  README.md  bot-bridge.py  package.json  pyproject.toml  pytest.ini  render.yaml
.github/workflows/: test.yml
antigravity_remote/: __init__.py  __main__.py  agent.py  bot.py  config.py  secrets.py  state.py  two_way_chat.py
antigravity_remote/handlers/: __init__.py  ai.py  base.py  control.py  files.py  monitoring.py  quick.py  screen.py
antigravity_remote/utils/: __init__.py  automation.py  ocr.py  screenshot.py
server/: api.py  app.py  bot.py  config.py  errors.py  main.py  requirements.txt  schemas.py  utils.py
server/controllers/: __init__.py  telegram.py
server/db/: __init__.py  database.py
server/routes/: __init__.py  api.py  websocket.py
server/services/: __init__.py
tests/: requirements.txt  test_integration.py  test_services.py
