[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antigravity-remote"
version = "4.5.1"
description = "The Vibecoder's Best Friend - Control your AI coding assistant from your phone"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kubrat" }
]
keywords = ["telegram", "bot", "antigravity", "remote", "ai", "automation", "vibecoder", "mobile-coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "websockets>=10.0",
    "python-telegram-bot>=20.0",
    "mss>=9.0.0",
    "pyautogui>=0.9.53",
    "pygetwindow>=0.0.9",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pyperclip>=1.8.2",
    "httpx>=0.24.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
secure = [
    "keyring>=23.0.0",
]
voice = [
    "faster-whisper>=0.9.0",
    "pydub>=0.25.0",
]
tts = [
    "pyttsx3>=2.90",
]
all = [
    "keyring>=23.0.0",
    "faster-whisper>=0.9.0",
    "pydub>=0.25.0",
    "pyttsx3>=2.90",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
antigravity-remote = "antigravity_remote.__main__:main"

[project.urls]
Homepage = "https://github.com/kubrat/antigravity-remote"
Repository = "https://github.com/kubrat/antigravity-remote"

[tool.hatch.build.targets.wheel]
packages = ["antigravity_remote"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
